--- a/style.css
+++ b/style.css
@@ -1,9 +1,84 @@
+* { box-sizing: border-box; }
 
-html,body {
-  margin: 0;
-  padding: 0;
-  font: unset;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+:root {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+}
+
+body {
+  background-color: #000;
+  color: #ddd;
+}
+
+a {
+  color: #B29B3E;
+  text-decoration: none;
+}
+a:hover {
+  color: #D2BB5E;
+}
+
+/* Graph stuff */
+.calc-wrapper {
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  align-items: stretch;
+  justify-items: stretch;
+  flex-direction: column;
+}
+
+.calc {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  align-items: stretch;
+}
+
+.calc>div {
+  height: auto !important;
+}
+
+.dot::after {
+  content: '/';
   color: #333;
+}
+
+.header {
+  display: flex;
+  gap: 0.7em;
+  padding: 0.8rem 1rem;
+  font-size: 0.9em;
+}
+
+/* Index stuff */
+.index-wrapper {
+  padding: 2rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+.index {
+  min-width: 300px;
+  /* width: 100%; */
+  padding: 1rem;
+}
+
+.graph-list {
+  padding: 0.8rem 0;
+}
+
+.graph {
+  padding-top: 1rem;
+}
+.graph::before {
+  content: '•';
+  padding-right: 0.8rem;
 }
