--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a:hover {
   width: 100%;
 }
 
-.index h1 {
+h1 {
   font-size: 1.6rem;
 }
 .index p {
@@ -155,5 +155,31 @@ a:hover {
 .header button.reset {
   background-color: #161616;
   color: var(--color-accent);
+}
+.header button.fork {
+  background: transparent;
+  border: 1px solid var(--color-accent);
+  color: var(--color-accent);
+}
+
+
+
+.dialog {
+  padding: 0;
+}
+.dialog[open] {
+  animation: fadeIn 0.3s ease-in-out forwards;
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.list li::before {
+  content: "- ";
 }
 
